added work to lab1

--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -276,7 +276,9 @@
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit.columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +294,9 @@
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean"
+    "Credit['Age'].mean()"
    ]
   },
   {
@@ -319,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median"
+    "Credit['Age'].median()"
    ]
   },
   {
@@ -329,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mode"
+    "Credit['Age'].mode()"
    ]
   },
   {
@@ -347,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Subset = "
+    "Subset = Credit[['Age', 'Region', 'Income']]"
    ]
   },
   {
@@ -367,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Younger = "
+    "Younger = Subset[Subset['Age'] < 50]"
    ]
   },
   {
@@ -377,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Older = "
+    "Older = Subset[Subset['Age'] >= 50]"
    ]
   },
   {
@@ -395,7 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean of younger"
+    "younger_mean = Younger['Income'].mean()\n",
+    "older_mean = Older['Income'].mean()"
    ]
   },
   {
@@ -405,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean of older"
+    "younger_mean"
    ]
   },
   {
@@ -415,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median of younger"
+    "Younger['Income'].median()"
    ]
   },
   {
@@ -425,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median of older"
+    "Older['Income'].median()"
    ]
   },
   {
@@ -441,7 +446,7 @@
    "id": "896e300a",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "Since mean income is higher than median for both age groups shows that income is right skewed. This shows that a small number of people get significantly higher incomes which brings the mean upward relative to thee median."
    ]
   },
   {
@@ -458,7 +463,9 @@
    "id": "d2954498",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Region'].unique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -474,7 +481,9 @@
    "id": "308f0c5b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Region'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -490,7 +499,9 @@
    "id": "3bfc07c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student_means = Credit.groupby('Student')['Income'].mean()"
+   ]
   },
   {
    "cell_type": "code",
@@ -498,7 +509,9 @@
    "id": "fad3d6c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student_means"
+   ]
   },
   {
    "cell_type": "code",
@@ -506,7 +519,9 @@
    "id": "b818baa7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student_means['Yes']"
+   ]
   },
   {
    "cell_type": "code",
@@ -514,7 +529,9 @@
    "id": "acdb144a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student_means['No']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,7 +549,9 @@
    "id": "65cbe997",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Utilization'] = Credit['Balance'] / Credit['Limit']"
+   ]
   },
   {
    "cell_type": "code",
@@ -556,7 +575,9 @@
    "id": "58512879",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Utilization'].max()"
+   ]
   }
  ],
  "metadata": {
