--- a/mod02_trainingsplit.ipynb
+++ b/mod02_trainingsplit.ipynb
@@ -227,8 +227,8 @@
    "outputs": [],
    "source": [
     "# Fit a linear model\n",
-    "model_lin = #fill-in\n",
-    "results_lin = #fill-in\n",
+    "model_lin = sm.OLS(y_train, x_train[['intercept','x']])\n",
+    "results_lin = model_lin.fit()\n",
     "summarize(results_lin)"
    ]
   },
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "# Get model predictions\n",
-    "predictions_lin_train = #fill-in"
+    "predictions_lin_train = x_train['pred_lin']"
    ]
   },
   {
@@ -253,8 +253,8 @@
     "# Plot predictions as solid *orange* line\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(x_train['x'],y_train)\n",
-    "linear = #fill-in\n",
-    "ax.plot( #fill-in"
+    "linear = x_train[['x','pred_lin']].sort_values('x')\n",
+    "ax.plot(linear['x'], linear['pred_lin'], color='orange')"
    ]
   },
   {
@@ -273,8 +273,8 @@
    "outputs": [],
    "source": [
     "# Fit a cubic model\n",
-    "model_cubic = #fill-in\n",
-    "results_cubic = #fill-in\n",
+    "model_cubic = sm.OLS(y_train, x_train[['intercept','x','x_sq','x_cu']])\n",
+    "results_cubic = model_cubic.fit()\n",
     "summarize(results_cubic)"
    ]
   },
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "# Get predictions\n",
-    "x_train['pred_cu'] = #fill-in"
+    "x_train['pred_cu'] = predict(x_train[['intercept', 'x', 'x_sq', 'x_cu']], results_cubic)"
    ]
   },
   {
@@ -299,8 +299,8 @@
     "# Plot predictions as solid *red* line\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(x_train['x'],y_train)\n",
-    "cubic = #fill-in\n",
-    "ax.plot( #fill-in"
+    "cubic = x_train[['x','pred_cu']].sort_values('x')\n",
+    "ax.plot(cubic['x'], cubic['pred_cu'], color='red')"
    ]
   },
   {
@@ -316,8 +316,7 @@
    "id": "e919ee6e",
    "metadata": {},
    "source": [
-    "#fill-in\n",
-    "Type your answer here."
+    "The linear model is looks to be the worst b/c it only fits a straight line and misses curve in training data. Quad model fits curved pattern and matches trend the best. Cubic model is similar to quadratic, but is more flexible. Quadratic looks best, linear looks worst, cubic may slightly overfit in comparioson to quadratic."
    ]
   },
   {
@@ -353,9 +352,9 @@
    "outputs": [],
    "source": [
     "# Calculate the MSE on the test set for each model\n",
-    "predictions_lin_test = #fill-in\n",
-    "predictions_quad_test = #fill-in\n",
-    "predictions_cubic_test = #fill-in\n",
+    "predictions_lin_test = predict(x_test[['intercept', 'x']], results_lin)\n",
+    "predictions_quad_test = predict(x_test[['intercept', 'x', 'x_sq']], results_quad)\n",
+    "predictions_cubic_test = predict(x_test[['intercept', 'x', 'x_sq', 'x_cu']], results_cubic)\n",
     "\n",
     "print('mse test linear   :',mse(y_test, predictions_lin_test))\n",
     "print('mse test quadratic:',mse(y_test, predictions_quad_test))\n",
@@ -375,8 +374,7 @@
    "id": "deb74c23",
    "metadata": {},
    "source": [
-    "#fill-in\n",
-    "Type your answer here."
+    "On training set, cubic model usually gets lowest MSE b/c it is most flexible, while linear model usually has highest training MSE b/c it can't capture the curved part. On the test set, quadratic model usually performs best/ lowest test MSE b/c it grabs the real cruve without complexity that is not needed. Linear model is most likely underfit/high bias, and cubic model is most likely overfit/higher variance, even more so if test MSE incr in comparison with quadratic."
    ]
   }
  ],
