--- a/mod02_trainingsplit.ipynb
+++ b/mod02_trainingsplit.ipynb
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "# Get model predictions\n",
-    "predictions_lin_train = x_train['pred_lin']"
+    "x_train['pred_lin'] = predict(x_train[['intercept','x']], results_lin)"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "# Get predictions\n",
-    "x_train['pred_cu'] = predict(x_train[['intercept', 'x', 'x_sq', 'x_cu']], results_cubic)"
+    "x_train['pred_cu'] = predict(x_train[['intercept','x','x_sq','x_cu']], results_cubic)"
    ]
   },
   {
