--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -60,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "#fillin\n",
+    "Hitters.shape"
    ]
   },
   {
@@ -79,7 +80,7 @@
    "outputs": [],
    "source": [
     "for col in Hitters.columns:\n",
-    "    "
+    "    print(col, Hitters[col].dtype)"
    ]
   },
   {
@@ -116,7 +117,7 @@
    "id": "7043da87",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here"
+    "Cols that start with C are cart placement and related cols are completed purchases"
    ]
   },
   {
@@ -134,7 +135,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "c_cols = ['CAtBat','CHits','CHmRun','CRuns','CRBI','CWalks']\n",
+    "c_cols = [c for c in c_cols if c in Train.columns]\n",
+    "\n",
+    "fig, axes = subplots(2, 3, figsize=(12, 7))\n",
+    "axes = axes.ravel()\n",
+    "\n",
+    "for ax, col in zip(axes, c_cols):\n",
+    "    ax.scatter(Train[col], Train['Salary'], alpha=0.6)\n",
+    "    ax.set_xlabel(col)\n",
+    "    ax.set_ylabel('Salary')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -152,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "Train.describe()"
    ]
   },
   {
@@ -170,7 +183,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "plt.hist(Train['AtBat'].dropna(), bins=20)\n",
+    "plt.title('Histogram of AtBat (Training Set)')\n",
+    "plt.xlabel('AtBat')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()"
    ]
   },
   {
@@ -188,7 +205,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "mu = Train['AtBat'].mean()\n",
+    "sigma = Train['AtBat'].std(ddof=0)\n",
+    "Train['AtBat_st'] = (Train['AtBat'] - mu) / sigma\n",
+    "Train[['AtBat','AtBat_st']].head()"
    ]
   },
   {
@@ -208,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "len(Train[np.abs(Train['AtBat_st']) <= 1])"
    ]
   },
   {
@@ -224,7 +244,7 @@
    "id": "cf0fb15c",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "Describe output shows lower count for Salary compared to other cols, means some vals are missing."
    ]
   },
   {
@@ -240,7 +260,7 @@
    "id": "6513b00a",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "If missing vals are shown by placeholder nums instead of NaN, describe will not show them missing."
    ]
   },
   {
@@ -258,7 +278,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "mask_missing = Train['Salary'].isna()\n",
+    "plt.boxplot([Train.loc[~mask_missing, 'AtBat'].dropna(), Train.loc[mask_missing, 'AtBat'].dropna()],\n",
+    "            labels=['Salary present', 'Salary missing'])\n",
+    "plt.title('AtBat by Salary Missingness (Training Set)')\n",
+    "plt.ylabel('AtBat')\n",
+    "plt.show()"
    ]
   },
   {
@@ -276,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "Train.select_dtypes(include=[np.number]).corr()"
    ]
   },
   {
@@ -292,7 +317,7 @@
    "id": "8fed5120",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "Impute missing salaries using median based on boxplot or use regression imputation with vars that highly corelated with sal from correlation matrix."
    ]
   },
   {
@@ -312,9 +337,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TotHits = #fillin\n",
-    "TotWalks = #fillin\n",
-    "TotAtBat = #fillin\n",
+    "TotHits = Train['Hits'].sum()\n",
+    "TotWalks = Train['Walks'].sum()\n",
+    "TotAtBat = Train['AtBat'].sum()\n",
     "\n",
     "Labels = ['Hits', 'Walks', 'Neither']\n",
     "Totals = [TotHits, TotWalks, TotAtBat-TotHits-TotWalks]"
@@ -327,7 +352,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pie chart\n"
+    "plt.pie(Totals, labels=Labels, autopct='%1.1f%%')\n",
+    "plt.title('Totals: Hits vs Walks vs Neither (Training Set)')\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -345,7 +373,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "Train['AVG'] = Train['Hits'] / Train['AtBat']\n",
+    "Train['AVG'].head()"
    ]
   },
   {
@@ -364,8 +393,9 @@
    "outputs": [],
    "source": [
     "Train['AVG_bin'] = 'medium'\n",
-    "Train['AVG_bin'][#fillin] = 'low'\n",
-    "Train['AVG_bin'][#fillin] = 'high'"
+    "Train.loc[Train['AVG'] < 0.25, 'AVG_bin'] = 'low'\n",
+    "Train.loc[Train['AVG'] >= 0.31, 'AVG_bin'] = 'high'\n",
+    "Train[['AVG','AVG_bin']].head()"
    ]
   },
   {
@@ -412,12 +442,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.bar(#fillin\n",
+    "plt.bar(range(len(indexMap)), reordered_list)\n",
     "\n",
-    "plt.title(\"1986 AVG (Training Set)\")\n",
-    "plt.ylabel(\"Number of Players\")\n",
+    "plt.title('1986 AVG (Training Set)')\n",
+    "plt.ylabel('Number of Players')\n",
     "\n",
-    "plt.xticks(#fillin\n",
+    "plt.xticks(range(len(indexMap)), indexMap)\n",
     "\n",
     "plt.show()"
    ]
@@ -435,7 +465,7 @@
    "id": "0476cc83",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "Used  equalvdepth method bc each bin has about same num of obseravations instead of just covering same numeric range."
    ]
   }
  ],
