--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -206,9 +206,8 @@
    "outputs": [],
    "source": [
     "mu = Train['AtBat'].mean()\n",
-    "sigma = Train['AtBat'].std(ddof=0)\n",
-    "Train['AtBat_st'] = (Train['AtBat'] - mu) / sigma\n",
-    "Train[['AtBat','AtBat_st']].head()"
+    "sigma = Train['AtBat'].std()\n",
+    "Train['AtBat_st'] = ((Train['AtBat'] - mu) / sigma).round(3)"
    ]
   },
   {
