--- a/mod04_linear.ipynb
+++ b/mod04_linear.ipynb
@@ -179,7 +179,7 @@
    "id": "387e7ca5",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "Likely no missing vals bc dataset loads without errors and counts in summary/describe() match num of rows for each col. Plotting/training the model works without needing to drop NA vals which would typically fail or change row counts is there was missing data."
    ]
   },
   {
@@ -216,7 +216,7 @@
    "id": "31cd47d9",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "temp / atemp measure almost same thing being actual temperature vs feels like temperature, so they are associated with each other heavily. Including both gives redundant predictors which make coefficients unusable and it doesnt add much predicitive val"
    ]
   },
   {
@@ -283,7 +283,8 @@
    "id": "bcc6db16",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "temp = 20/41 = 0.4878\n",
+    "prediction is about 143 bikers"
    ]
   },
   {
@@ -410,8 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_2 = #fillin\n",
-    "results_2 = #fillin\n",
+    "model_2 = sm.OLS(y_train, X_train[['intercept','temp','holiday']])\n",
+    "results_2 = model_2.fit()\n",
     "summarize(results_2)"
    ]
   },
@@ -428,7 +429,7 @@
    "id": "8e7d113e",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "No bc in temp+holiday model holiday has large p-value so it doesn’t really help explain bikers beyond what temp already informs"
    ]
   },
   {
@@ -446,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "results_2.rsquared"
    ]
   },
   {
@@ -464,9 +465,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_train_2 = #fillin\n",
+    "predictions_train_2 = predict(X_train[['intercept', 'temp', 'holiday']], results_2)\n",
     "\n",
-    "predictions_test_2 = #fillin"
+    "predictions_test_2 = predict(X_test[['intercept', 'temp', 'holiday']], results_2)"
    ]
   },
   {
@@ -482,7 +483,7 @@
    "id": "9022b435",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "It is only slightly better where MSE drops tiny bit, but improvement is negligible, holiday is not significant so its not worth extra complexity"
    ]
   },
   {
@@ -500,8 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_3 = #fillin\n",
-    "results_3 = #fillin\n",
+    "model_3 = sm.OLS(y_train, X_train[['intercept','temp','windspeed']])\n",
+    "results_3 = model_3.fit()\n",
     "summarize(results_3)"
    ]
   },
@@ -520,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fillin"
+    "results_3.rsquared"
    ]
   },
   {
@@ -538,9 +539,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_train_3 = #fillin\n",
+    "predictions_train_3 = predict(X_train[['intercept', 'temp', 'windspeed']], results_3)\n",
     "\n",
-    "predictions_test_3 = #fillin"
+    "predictions_test_3 = predict(X_test[['intercept', 'temp', 'windspeed']], results_3)"
    ]
   },
   {
@@ -556,7 +557,7 @@
    "id": "fbe1ee0f",
    "metadata": {},
    "source": [
-    "#fillin Type your answer here."
+    "I would choose model with temp +windspeed bc it has lowest test MSE and highest R^2 of those three, plus both predictors are important stat wise"
    ]
   }
  ],
